[r=blake-rouse][bug=1681745][author=ricgard] Removes the padding and height on dashboard names to fix alignment.

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -118,6 +118,11 @@
     }
   }
 
+  .button--no-padding {
+    height: initial;
+    padding: 0;
+  }
+
   .page-header .page-header__status .page-header__status-check {
     display: inline-block;
     width: initial;
